--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,35 +1,48 @@
 @font-face {
-	font-family: CormorantUpright;
-	font-display: swap;
-	src: url("../fonts/CormorantUpright-Bold.woff2") format("woff2"), url("../fonts/CormorantUpright-Bold.woff") format("woff");
-	font-weight: 700;
-	font-style: normal;
+  font-family: LibreFranklin;
+  font-display: swap;
+  src: url('../fonts/LibreFranklin-Bold.woff2') format('woff2'),
+    url('../fonts/LibreFranklin-Bold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
 }
 @font-face {
-	font-family: CormorantUpright;
-	font-display: swap;
-	src: url("../fonts/CormorantUpright-Light.woff2") format("woff2"), url("../fonts/CormorantUpright-Light.woff") format("woff");
-	font-weight: 300;
-	font-style: normal;
+  font-family: LibreFranklin;
+  font-display: swap;
+  src: url('../fonts/LibreFranklin-BoldItalic.woff2') format('woff2'),
+    url('../fonts/LibreFranklin-BoldItalic.woff') format('woff');
+  font-weight: 700;
+  font-style: italic;
 }
 @font-face {
-	font-family: CormorantUpright;
-	font-display: swap;
-	src: url("../fonts/CormorantUpright-Medium.woff2") format("woff2"), url("../fonts/CormorantUpright-Medium.woff") format("woff");
-	font-weight: 500;
-	font-style: normal;
+  font-family: LibreFranklin;
+  font-display: swap;
+  src: url('../fonts/LibreFranklin-Italic.woff2') format('woff2'),
+    url('../fonts/LibreFranklin-Italic.woff') format('woff');
+  font-weight: 400;
+  font-style: italic;
 }
 @font-face {
-	font-family: CormorantUpright;
-	font-display: swap;
-	src: url("../fonts/CormorantUpright-SemiBold.woff2") format("woff2"), url("../fonts/CormorantUpright-SemiBold.woff") format("woff");
-	font-weight: 600;
-	font-style: normal;
+  font-family: LibreFranklin;
+  font-display: swap;
+  src: url('../fonts/LibreFranklin-Regular.woff2') format('woff2'),
+    url('../fonts/LibreFranklin-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
 }
 @font-face {
-	font-family: Morgen 400;
-	font-display: swap;
-	src: url("../fonts/Morgen 400.woff2") format("woff2"), url("../fonts/Morgen 400.woff") format("woff");
-	font-weight: 400;
-	font-style: normal;
+  font-family: SourceSerifPro;
+  font-display: swap;
+  src: url('../fonts/SourceSerifPro-Regular.woff2') format('woff2'),
+    url('../fonts/SourceSerifPro-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: TenorSans;
+  font-display: swap;
+  src: url('../fonts/TenorSans-Regular.woff2') format('woff2'),
+    url('../fonts/TenorSans-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
 }
